--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src='js/jquery.bxslider.min.js'></script>
     <script src="js/script.js"></script>
   </head>
   <body>
     <header>
     	<div class='header_content_wrapper'>
-    		<a href="#">TOCKIT</a>
+    		<a href="#" class="logo">TOCKIT</a>
     		<ul class="nav">
     			<li>
     				<a href="#">HOME</a>
@@ -55,23 +57,261 @@
 
 
 	    	<div class="service_container">
-		    	<div class='service'> 
+		    	<div class='service first'> 
 		    		<div class="image"></div>
 		    		<h1>STRATEGY PLANNING</h1>
 		    		<p>Strategy includes processes of formulation and implementation; strategic planning helps coordinate both.</p>
 		    	</div>
-		    	<div class='service'> 
+		    	<div class='service second'> 
 		    		<div class="image"></div>
 		    		<h1>MOTION PICTURES</h1>
 		    		<p>The motion picture is a remarkably effective medium in conveying drama and especially in the evocation of emotion.</p>
 		    	</div>
-		    	<div class='service'> 
+		    	<div class='service third'> 
 		    		<div class="image"></div>
-		    		<h1>0 to success</h1>
+		    		<h1>0 TO SUCCESS</h1>
 		    		<p>Strategy includes processes of formulation and implementation; strategic planning helps coordinate both.</p>
 		    	</div>	
 	    	</div>
 	    </div>
+
+        <div class = "section studies_section">
+            <div class="head">
+                <h1><span>CASE</span> STUDIES</h1>
+                <div class="lines">
+                    <div class="line first"></div>
+                    <div class="line second"></div>
+                </div>
+            </div>
+
+            <div class='container' >
+                <div class='item first'>
+                    <div class='item_lines'>
+                        <div class="vertical"></div>
+                        <div class='horizontal_1'></div>
+                        <div class='horizontal_2'></div>
+                    </div>
+                    <div class='image'>
+                        <img src='images/1.jpg' />
+                    </div>
+                    <h1>POP THE TASTE</h1>
+                    <p>We were looking to make everyday life a little less gray with a new video from somewhere unexpected.</p>
+                    <a href="#" class="btn btn-small">MORE</a>
+                </div>
+                 <div class='item second'>
+                    <div class='item_lines'>
+                        <div class="vertical"></div>
+                        <div class='horizontal_1'></div>
+                        <div class='horizontal_2'></div>
+                    </div>
+                    <div class='image'>
+                        <img src='images/2.jpg' />
+                    </div>
+                    <h1>MOMENT OF JOY</h1>
+                    <p>We were looking to make everyday life a little less gray with a new video from somewhere unexpected.</p>
+                    <a href="#" class="btn btn-small">MORE</a>
+                </div>
+                 <div class='item third'>
+                    <div class='item_lines'>
+                        <div class="vertical"></div>
+                        <div class='horizontal_1'></div>
+                        <div class='horizontal_2'></div>
+                    </div>
+                    <div class='image'>
+                        <img src='images/3.jpg' />
+                    </div>
+                    <h1>FINE AND STRONG</h1>
+                    <p>We were looking to make everyday life a little less gray with a new video from somewhere unexpected.</p>
+                    <a href="#" class="btn btn-small">MORE</a>
+                </div>
+                 <div class='item forth'>
+                    <div class='item_lines'>
+                         <div class="vertical"></div>
+                        <div class='horizontal_1'></div>
+                        <div class='horizontal_2'></div>
+                    </div>
+                    <div class='image'>
+                        <img src='images/4.jpg' />
+                    </div>
+                    <h1>SMASH IT DOWN</h1>
+                    <p>We were looking to make everyday life a little less gray with a new video from somewhere unexpected.</p>
+                    <a href="#" class="btn btn-small">MORE</a>
+                </div>
+            </div>
+        </div>
+        <div class='section portfolio_section'>
+            <div class="head">
+                <h1><span>OUR</span> PORTFOLIO</h1>
+                <div class="lines">
+                    <div class="line first"></div>
+                    <div class="line second"></div>
+                </div>
+            </div>
+            <div class='portfolio'>
+                <div class='portfolio_menu'>
+                    <div class = 'border'></div>
+                    <h1>FILTER BY TYPE</h1>
+
+                    <ul class='slider_pager'>
+                        <li>
+                            <a data-slide-index="0" href='#'>All</a>
+                        </li>
+                        <li>
+                            <a data-slide-index="1" href='#'>Girls</a>
+                        </li>
+                        <li>
+                            <a  data-slide-index="2" href='#'>Food</a>
+                        </li>
+                        <li>
+                            <a data-slide-index="3" href='#'>Cars</a>
+                        </li>
+                        <li>
+                            <a data-slide-index="4" href='#'>Fashion</a>
+                        </li>
+                        <li>
+                            <a data-slide-index="5" href='#'>Other</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="portfolio_slider">
+                    <div class='slider_item'>
+                        <div class="photo">
+                            <img src='https://s-media-cache-ak0.pinimg.com/736x/ec/f4/03/ecf403a5cfc68f9110acbaa83238e0eb.jpg' />
+                        </div><!--
+                        !--><div class = "photo">
+                            <div class="small">
+                                <img src='http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-101332.jpg' />
+                            </div>
+                            <div class="small">
+                                <img src='http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-2618.jpg' />
+                            </div>
+                        </div><!--
+                        !--><div class="photo">
+                            <img src='https://s-media-cache-ak0.pinimg.com/736x/f3/7c/36/f37c36b31d26c4d182353112d52d62d4.jpg' />
+                        </div>
+                    </div>
+                    <div class='slider_item'>
+                         <div class="photo">
+                            <div class="small">
+                                <img src='http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-66932.jpg' />
+                            </div>
+                            <div class="small">
+                                <img src='http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-101366.jpg' />
+                            </div>
+                        </div><!--
+                        !--><div class="photo">
+                            <img src='https://s-media-cache-ak0.pinimg.com/736x/ce/2b/af/ce2baf2293a5ec62c1a0a54e89627259.jpg' />
+                        </div><!--
+                        !--><div class="photo">
+                                <div class="small">
+                                    <img src='http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-157477.png' />
+                                </div>
+                                <div class="small">
+                                    <img src='http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-71940.jpg' />
+                                </div>
+                        </div>
+                        
+                    </div>
+                    <div class="slider_item">
+                        <div class="photo">
+                            <img src='https://s-media-cache-ak0.pinimg.com/736x/f0/1b/f5/f01bf53babe1556030f00ec3b981085c.jpg' />
+                        </div><!--
+                        !--><div class = "photo">
+                            <div class="small">
+                                <img src='http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-2548.jpg' />
+                            </div>
+                            <div class="small">
+                                <img src='http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-2651.jpg' />
+                            </div>
+                        </div><!--
+                        !--><div class="photo">
+                            <img src='https://s-media-cache-ak0.pinimg.com/736x/f9/66/6a/f9666a61f156b1b45d4e99f40db45354.jpg' />
+                        </div>
+                    </div>
+                    <div class="slider_item">
+                       <div class="photo">
+                            <div class="small">
+                                <img src='http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-57298.jpg' />
+                            </div>
+                            <div class="small">
+                                <img src='http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-21079.jpg' />
+                            </div>
+                        </div><!--
+                        !--><div class="photo">
+                            <img src='http://40.media.tumblr.com/tumblr_ln4vjwIUfE1qeoz8ro1_500.jpg' />
+                        </div><!--
+                        !--><div class="photo">
+                                <div class="small">
+                                    <img src='http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-149792.jpg' />
+                                </div>
+                                <div class="small">
+                                    <img src='http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-1150.jpg' />
+                                </div>
+                        </div>
+                    </div>
+                    <div class="slider_item">
+                        <div class="photo">
+                            <img src='https://s-media-cache-ak0.pinimg.com/736x/a4/c8/61/a4c861900c5240b084bbb62db95e7739.jpg' />
+                        </div><!--
+                        !--><div class="photo">
+                            <img src='http://41.media.tumblr.com/562f55906488f742265f15a3acca1f88/tumblr_ne7tvhWnqS1spbrcwo1_1280.jpg' />
+                        </div><!--
+                        !--><div class="photo">
+                            <img src='http://36.media.tumblr.com/tumblr_ljois10ZjF1qfs774o1_500.jpg' />
+                        </div>
+                    </div>
+                    <div class="slider_item">
+                        <div class="photo"
+                        /div><!--
+                        !--><div class="photo">
+                        </div><!--
+                        !--><div class="photo">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class='view_more'>
+                <div class='box'>
+                    <div class="top"></div>
+                    <div class="left"></div>
+                    <div class='right'></div>
+                    <div class='bottom_left'></div>
+                    <div class='bottom_right'></div>
+                </div>
+                <a href="#" class='btn btn-large'>VIEW MORE</a>
+                <div class='first_line'></div>
+                <div class="second_line"></div>
+            </div>
+        </div>
+        <div class=" section clients_section">
+
+            <div class="quote_slider">
+                <div class='slider_item first'>
+                    <p>“This company is fantastic ! It was an enjoyable experience. I very much appreciated dealing with a truly dedicated team. The level of quality and service I received was REALLY GREAT. ”</p>
+                    <h2>Steven Sought, <span>Musician</span></h2>
+                </div>
+                <div class='slider_item second'>
+                    <p>“This company is fantastic ! It was an enjoyable experience. I very much appreciated dealing with a truly dedicated team. The level of quality and service I received was REALLY GREAT. ”</p>
+                    <h2>Jennifer Lawrence, <span>Godness</span></h2>
+                </div>
+                <div class='slider_item third'>
+                    <p>“This company is fantastic ! It was an enjoyable experience. I very much appreciated dealing with a truly dedicated team. The level of quality and service I received was REALLY GREAT. ”</p>
+                    <h2>Steven Sought, <span>sdfsdfsdfsdfsd</span></h2>
+                </div>
+            </div>
+
+            <div class='quote_pager'>
+                <div>
+                    <a  data-slide-index="0" href='#'>1</a>
+                </div><!--
+                !--><div>
+                    <a  data-slide-index="1" href='#'>2</a>
+                </div><!--
+                !--><div>
+                    <a  data-slide-index="2" href='#'>3</a>
+                </div>
+            </div>
+        </div>
     </div>
   </body>
 </html>
