--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title>Tockit</title>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" >
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src='js/jquery.bxslider.min.js'></script>
+    <script type="text/javascript" src='js/jquery.waypoints.min.js'></script>
     <script src="js/script.js"></script>
   </head>
   <body>
@@ -41,10 +42,10 @@
 
     <div class="full_page">
 	    <div class="section welcome_section">
-	    	<p class='head'>WELCOME on <span>TOCKIT</span></p>
+	    	<p class='head_text'>WELCOME on <span>TOCKIT</span></p>
 	    	<p class='text'>We are a digital agency <span>with years of experience</span> and with <span>extraordinary people</span></p>
 	    	<a class='btn btn-large' href='#'>BROWSE OUR WORK</a>
-	    	<a class='btn-round' href='#'><i class="fa fa-arrow-down"></i></a>
+	    	<a class='btn-round' href='#'></a>
 	    </div>
 	    <div class="section why_us_section">
 	    	<div class="head">
@@ -85,6 +86,7 @@
             </div>
 
             <div class='container' >
+                <div class="top_line"></div>
                 <div class='item first'>
                     <div class='item_lines'>
                         <div class="vertical"></div>
@@ -283,7 +285,15 @@
                 <div class="second_line"></div>
             </div>
         </div>
+        </div>
         <div class=" section clients_section">
+            <div class="head white absolute_head">
+                <h1><span>CLIENT</span> REVIEWS</h1>
+                <div class="lines">
+                    <div class="line first"></div>
+                    <div class="line second"></div>
+                </div>
+            </div>
 
             <div class="quote_slider">
                 <div class='slider_item first'>
@@ -310,6 +320,52 @@
                 !--><div>
                     <a  data-slide-index="2" href='#'>3</a>
                 </div>
+            </div>
+        </div>
+        <div class='send_us_section section'>
+            <div class='request'>
+                <h1>request <span>a free consultation !</span></h1>
+            </div>
+            <div class="head">
+                <h1><span>SEND US</span> A MESSAGE</h1>
+                <div class="lines">
+                    <div class="line first"></div>
+                    <div class="line second"></div>
+                </div>
+            </div>
+            <div class='form_wrapper'>
+                <div class='input_wrapper'>
+                    <label for='name'>
+                        <span>Name <i>*</i></span>
+                    </label>
+                    <input id='name' autocomplete='off'>
+                    <div class='shadow'></div>
+                </div>
+                <div class='input_wrapper'>
+                    <label for='email'>
+                        <span>Email <i>*</i></span>
+                    </label>
+                    <input id='email' autocomplete='off'>
+                    <div class='shadow'></div>
+                </div>
+                <div class='textarea_wrapper'>
+                    <label for='message'>
+                        <span>Message <i>*</i></span>
+                    </label>
+                    <textarea id='message' autocomplete='off'></textarea>
+                    <div class='shadow'></div>
+                </div>
+
+                <a href=# class='btn btn-large'>SEND MESSAGE</a>
+            </div>
+        </div>
+        <div class='footer'>
+            <div class='line'></div>
+            <h2>ALL RIGHTS RESERVED. COPYRIGHT © 2015 <span>TOCKIT</span></h2>
+            <div class='socials'>
+                <a href='#'><i class="fa fa-facebook"></i></a>
+                <a href='#'><i class="fa fa-twitter"></i></a>
+                <a href='#'><i class="fa fa-linkedin"></i></a>
             </div>
         </div>
     </div>
