--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
     	<div class='header_content_wrapper'>
-    		<a href="#" class="logo">TOCKIT</a>
+    		<a href="#" class="logo">VOVA SITE</a>
     		<ul class="nav">
     			<li>
     				<a href="#home">HOME</a>
@@ -89,7 +89,7 @@
 
     <div class="full_page">
 	    <div class="section welcome_section" id='home'>
-	    	<p class='head_text'>WELCOME on <span>TOCKIT</span></p>
+	    	<p class='head_text'>WELCOME on <span>VOVA SITE</span></p>
 	    	<p class='text'>We are a digital agency <span>with years of experience</span> and with <span>extraordinary people</span></p>
 	    	<a class='btn btn-large' href='#'>BROWSE OUR WORK</a>
 	    	<a class='btn-round' href='#'></a>
